--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.0",
     "next": "14.1.0",
+    "nodemailer": "^6.9.12",
     "query-string": "^8.1.0",
     "react": "^18",
     "react-datepicker": "^5.0.0",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.49.3",
+    "react-toastify": "^10.0.4",
     "stripe": "^14.14.0",
     "svix": "^1.15.0",
     "tailwind-merge": "^2.2.1",
@@ -41,6 +43,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
     "@types/react-datepicker": "^4.19.5",
     "@types/react-dom": "^18",
